--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/outfit": "^5.0.8",
     "@fontsource/roboto": "^5.0.8",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^11.2.4",
     "gsap": "^3.12.5",
     "gsap-trial": "^3.12.5",
